app.css
@font-face {
    font-family: 'OpenSans';
    font-style: normal;
    font-weight: 300;
    src: url('/fonts/Open_Sans/OpenSans-Light.ttf') format('truetype');
}
@font-face {
    font-family: 'OpenSans';
    font-style: normal;
    font-weight: 700;
    src: url('/fonts/Open_Sans/OpenSans-Bold.ttf') format('truetype');
}
@keyframes colorchange {
    from    {filter: hue-rotate(0deg)   brightness(1.2) contrast(90%);}
    to      {filter: hue-rotate(360deg) brightness(1.2) contrast(90%);}
}
html, body, #cube {
    width: 100%;
    padding: 0;
    margin: 0;
    font-family: OpenSans, Verdana, sans-serif;
}

.light {
    font-weight: 300;
}
.bold {
    font-weight: 700;
}
.vertical-box {
    flex-direction:column;
}
.horizontal-box {
    display: flex;
    flex-direction:row;
}

#cube {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-shrink: 0;
}
#cube > div, #cube > header {
    width: 100%;
    height:100%;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    box-sizing: border-box;
}
#cube > header > div {
    position: absolute;
    left: 1em;
    top: 8.5em;
    font-size: 3em;
}
#cube > header > div > h1, #cube > header > div > h6{
    margin: 0;
    line-height: 1;
}
#cube > header > img {
    width: 100%;
    animation: colorchange 10s infinite;
    animation-timing-function: linear;
}
#cube > div > h4 {
    width: 70%;
    text-align: justify;
}
#cube > div > h4 b {
    font-weight: 700;
}
#cube > .social {
    width: 35%;
    justify-content: space-around;
}
#cube > .social > div{
    width: 20%;
}
#cube > .social a:hover .social-icon__github {
    fill: #c6cbd1;
}
#cube > .social a:hover .social-icon__facebook {
    fill: #426FFF;
}
#cube  #what-is {
    width: 50%;
    padding: 4%;
    box-sizing: border-box;
}
#cube > #no-reconstruction {
    margin: 8% 0;
    padding: 2% 0;
    color: #FFF;
    background-color: rgb(82, 182, 236);
    align-items: flex-start;
    justify-content: space-around;
}
#cube > #no-reconstruction > * {
    max-width: 50%;
}
#cube > #team {
    align-items: center;
    margin-top: 8%;
}
#team > div > div > img {
    width: 100%;
}

@media (max-width: 768px) {
    #cube > header > img {
        height: 100vh;
        width: auto;
        animation: colorchange 10s infinite;
        animation-timing-function: linear;
    }
    #cube > header > div {
        top: auto;
        bottom: 14em;
    }
    #cube > header > div > h1 {
        font-size: 3em;
    }
    #cube > header > div > h6{
        font-size: 1em;
    }
}

